--- a/frontend/src/app/components/create-polls/create-polls.component.html
+++ b/frontend/src/app/components/create-polls/create-polls.component.html
@@ -1,3 +1,60 @@
-<button mat-raised-button color="accent">
+<button
+  (click)="isOpen = !isOpen"
+  mat-raised-button
+  color="accent"
+  style="margin-bottom: 2em;"
+>
   <mat-icon>add</mat-icon>Create poll
 </button>
+<div *ngIf="isOpen" style="margin-bottom: 2em;">
+  <form [formGroup]="form" (ngSubmit)="onSubmit(form.value)">
+    Value: {{ form.value | json }}
+    <div>
+      <mat-form-field style="width: 100%;">
+        <mat-label>Question</mat-label>
+        <input matInput formControlName="question" />
+        <mat-error>Required</mat-error>
+      </mat-form-field>
+    </div>
+    <div>
+      <mat-form-field style="width: 100%;">
+        <mat-label>Answer1</mat-label>
+        <input
+          matInput
+          [formControl]="answer1FormControl"
+          formControlName="answer1"
+        />
+      </mat-form-field>
+    </div>
+    <div>
+      <mat-form-field style="width: 100%;">
+        <mat-label>Answer2</mat-label>
+        <input
+          matInput
+          [formControl]="answer2FormControl"
+          formControlName="answer2"
+        />
+      </mat-form-field>
+    </div>
+    <div>
+      <mat-form-field style="width: 100%;">
+        <mat-label>Answer3</mat-label>
+        <input
+          matInput
+          [formControl]="answer3FormControl"
+          formControlName="answer3"
+        />
+      </mat-form-field>
+    </div>
+
+    <button
+      [disabled]="form.invalid"
+      style="width: 100%;"
+      mat-raised-button
+      color="accent"
+      type="submit"
+    >
+      Post poll
+    </button>
+  </form>
+</div>
