Front-end: Polls, login, and signup routes

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-navigation></app-navigation>
 <div style="margin: 100px 10%;">
-  <app-create-polls></app-create-polls>
-  <app-polls></app-polls>
+  <router-outlet></router-outlet>
+  <!-- <app-create-polls></app-create-polls>
+  <app-polls></app-polls> -->
 </div>
