--- a/frontend/src/app/components/signup/signup.component.html
+++ b/frontend/src/app/components/signup/signup.component.html
@@ -1,14 +1,28 @@
-<mat-form-field style="width: 100%;">
-  <mat-label>First name</mat-label>
-  <input #groceryInput matInput placeholder="Ex. Jon" />
-</mat-form-field>
-
-<mat-form-field style="width: 100%;">
-  <mat-label>Email</mat-label>
-  <input #groceryInput matInput placeholder="Ex. jon@gmail.com" />
-</mat-form-field>
-
-<mat-form-field style="width: 100%;">
-  <mat-label>Password</mat-label>
-  <input #groceryInput matInput />
-</mat-form-field>
+<form (ngSubmit)="signup()" [formGroup]="loginForm" novalidate>
+  <mat-form-field>
+    <mat-label>First name</mat-label>
+    <input matInput placeholder="Ex. Jon" formControlName="name" />
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Email</mat-label>
+    <input matInput placeholder="Ex. jon@gmail.com" formControlName="email" />
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Password</mat-label>
+    <input
+      matInput
+      type="password"
+      placeholder="Enter a password"
+      formControlName="password"
+    />
+  </mat-form-field>
+  <button
+    style="float: right; width: 200px;"
+    color="accent"
+    [disabled]="!loginForm.valid"
+    mat-raised-button
+    type="submit"
+  >
+    <span translate>Sign up</span>
+  </button>
+</form>
