--- a/frontend/src/app/components/polls/polls.component.html
+++ b/frontend/src/app/components/polls/polls.component.html
@@ -1,4 +1,4 @@
-<!-- <mat-card *ngFor="let poll of polls$ | async" style="margin-bottom: 1em;">
+<mat-card *ngFor="let poll of polls$ | async" style="margin-bottom: 1em;">
   <div style="font-size: 24px; font-weight: bold; margin-bottom: 1em;">
     {{ poll.question }}
   </div>
@@ -9,5 +9,4 @@
     {{ poll.answer2 }}
   </button>
   <button mat-flat-button color="primary">{{ poll.answer3 }}</button>
-</mat-card> -->
-polls
+</mat-card>
