--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -1,16 +1,29 @@
 <mat-toolbar
-  color="primary"
+  color="accent"
   style="display: flex; justify-content: space-between; padding: 0 64px;"
 >
-  <span>Polls</span>
   <span>
-    <a style="text-decoration: none; color: white;" routerLink="/polls"
+    <a style="text-decoration: none; color: white;" routerLink="/"
+      ><span>3Rez</span></a
+    ></span
+  >
+  <span>
+    <a
+      routerLinkActive="active-link"
+      style="text-decoration: none;"
+      routerLink="/polls"
       ><span>Polls</span></a
     >
-    <a style="text-decoration: none; color: white;" routerLink="/login"
+    <a
+      routerLinkActive="active-link"
+      style="text-decoration: none;"
+      routerLink="/login"
       ><span style="margin-left: 24px;">Login</span></a
     >
-    <a style="text-decoration: none; color: white;" routerLink="/signup"
+    <a
+      routerLinkActive="active-link"
+      style="text-decoration: none;"
+      routerLink="/signup"
       ><span style="margin-left: 24px;">Signup</span></a
     >
   </span>
