--- a/frontend/src/app/components/create-polls/create-polls.component.html
+++ b/frontend/src/app/components/create-polls/create-polls.component.html
@@ -7,48 +7,40 @@
   <mat-icon>add</mat-icon>Create poll
 </button>
 <div *ngIf="isOpen" style="margin-bottom: 2em;">
-  <form [formGroup]="form" (ngSubmit)="onSubmit(form.value)">
+  <form
+    #formDirective="ngForm"
+    [formGroup]="form"
+    (ngSubmit)="onSubmit(form.value)"
+    novalidate
+  >
     Value: {{ form.value | json }}
     <div>
       <mat-form-field style="width: 100%;">
         <mat-label>Question</mat-label>
         <input matInput formControlName="question" />
-        <mat-error>Required</mat-error>
       </mat-form-field>
     </div>
     <div>
       <mat-form-field style="width: 100%;">
         <mat-label>Answer1</mat-label>
-        <input
-          matInput
-          [formControl]="answer1FormControl"
-          formControlName="answer1"
-        />
+        <input matInput formControlName="answer1" />
       </mat-form-field>
     </div>
     <div>
       <mat-form-field style="width: 100%;">
         <mat-label>Answer2</mat-label>
-        <input
-          matInput
-          [formControl]="answer2FormControl"
-          formControlName="answer2"
-        />
+        <input matInput formControlName="answer2" />
       </mat-form-field>
     </div>
     <div>
       <mat-form-field style="width: 100%;">
         <mat-label>Answer3</mat-label>
-        <input
-          matInput
-          [formControl]="answer3FormControl"
-          formControlName="answer3"
-        />
+        <input matInput formControlName="answer3" />
       </mat-form-field>
     </div>
 
     <button
-      [disabled]="form.invalid"
+      [disabled]="!form.valid"
       style="width: 100%;"
       mat-raised-button
       color="accent"
