--- a/frontend/src/app/components/polls/polls.component.html
+++ b/frontend/src/app/components/polls/polls.component.html
@@ -1,3 +1,4 @@
+<app-create-polls (create)="createPost()"></app-create-polls>
 <mat-card *ngFor="let poll of polls$ | async" style="margin-bottom: 1em;">
   <div style="font-size: 24px; font-weight: bold; margin-bottom: 1em;">
     {{ poll.question }}
